@@ -2,6 +2,7 @@
 #define IL_SCRIPT_H
 
 #include <stdlib.h>
+#include <stdio.h>
 
 #include <lua.h>
 #include <lualib.h>
@@ -21,11 +22,13 @@ typedef struct il_Script_Script {
   const char * err;
 } il_Script_Script;
 
-#define il_Script_loadfile(f) { \
-  il_Script_Script* script;     \
-  script = il_Script_new();     \
-  il_Script_fromFile(script, f);\
-  il_Script_run(script);        \
+#define il_Script_loadfile(f) {   \
+  il_Script_Script* script;       \
+  script = il_Script_new();       \
+  il_Script_fromFile(script, f);  \
+  int res = il_Script_run(script);\
+  if (res != 0)                   \
+    printf("%s\n", script->err);  \
 }
 
 il_Script_Script * il_Script_new();
@@ -33,5 +36,6 @@ int il_Script_fromAsset(il_Script_Script*, il_Asset_Asset * asset);
 int il_Script_fromSource(il_Script_Script*, il_Common_String source);
 int il_Script_fromFile(il_Script_Script*, const char * filename);
 int il_Script_run(il_Script_Script*);
+void il_Script_luaGlobals(il_Script_Script*);
 
 #endif
